--- a/guessme/style.css
+++ b/guessme/style.css
@@ -3,6 +3,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Maven+Pro&display=swap');
 
 
+
 body
 {
 	background-image: url("Images/background.jpg");
@@ -10,6 +11,8 @@ body
 	background-size: cover;
 	height: 100vh;
 	width: 100%;
+	padding: 0px;
+	margin: 0px;
 	overflow: hidden;
 
 }
@@ -37,12 +40,16 @@ header {
 
 
 }
-
+.guess{
+	background-color: blue;
+	padding: 10px;
+	box-shadow: 0 0 30px black;
+}
 .box{
 	height: 600px;
 	width:600px;
 	background-color: white;
-	margin:100px auto;
+	margin:60px auto;
 	border-radius: 50px;
 	overflow: hidden;
 	box-shadow: 1px 1px 50px black;
@@ -106,7 +113,9 @@ header {
 	color: #FFF86A;
 	font-weight: bold;
 }
-
+.credits{
+	background-color: black;
+}
 
 
 @media only screen and (max-width: 700px){
@@ -126,7 +135,7 @@ header{
 .box{
 
 	height: 450px;
-	width:450px;
+	width:343px;
 	background-color: white;
 	margin:100px auto;
 	border-radius: 50px;
@@ -139,6 +148,27 @@ header{
 .word{
 	font-size: 30px;
 }
+.middle{
+	font-size: 20px;
+	margin-top: 10px;
+}
+
+.submit{
+	margin-left: 80px;
+	margin-top: 20px;
+	font-size: 25px;
+}
+.box h3{
+	margin-top: 20px;
+}
+.userinput::placeholder{
+	font-size: 15px;
+}
+
+.score{
+	font-size: 30px;
+}
+
 } 
 
 
