--- a/guessme/style.css
+++ b/guessme/style.css
@@ -135,9 +135,9 @@ header{
 .box{
 
 	height: 450px;
-	width:343px;
+	width:100%;
 	background-color: white;
-	margin:100px auto;
+	margin:40px auto;
 	border-radius: 50px;
 	overflow: hidden;
 }
